--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@
 *.exe
 *.out
 *.app
+.vs/2024.9.14/FileContentIndex/39ee23d0-9890-4eee-89be-a6d7bcdac769.vsidx
+.vs/2024.9.14/FileContentIndex/6b93cdd3-e8f0-4055-8bd9-306b47f9c8c8.vsidx
+.vs/2024.9.14/v17/Browse.VC.opendb
